--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
     
 </head>
 <body ng-app="MyApp" ng-controller="MyCtrl">
-    <div class="jumbotron">
-       <h1>{{title}}</h1> 
+    <div class="container">
+        <div class="jumbotron py-3">
+            <h1 class="text-center">{{title}}</h1> 
+            <p class="pt-3"></p>Coronavirus disease (COVID-19) is an infectious disease caused by a newly
+                discovered coronavirus.Most people who fall sick with COVID-19 will experience mild to moderate
+                symptoms and recover without special treatment.The disease has since spread worldwide, leading to 
+                an ongoing pandemic.Symptoms of COVID-19 are variable, but often include fever, cough, headache,
+                fatigue, breathing difficulties, and loss of smell and taste. Symptoms may begin one 
+                to fourteen days after exposure to the virus.
+            </p>
+         </div>
     </div>
 </body>
 </html>
