--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                 fatigue, breathing difficulties, and loss of smell and taste. Symptoms may begin one 
                 to fourteen days after exposure to the virus.
             </p>
+
+            <!---------all data-------->
+
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
+            <!---------End all data--------->
          </div>
     </div>
 </body>
