--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <body ng-app="MyApp" ng-controller="MyCtrl">
     <div class="container">
         <div class="jumbotron py-3">
-            <h1 class="text-center">{{title}}</h1> 
+            <img src="img/covid19.jpg" alt="covid 19" class="center">
+            <h1 class="text-center text-white">{{title}}</h1> 
             <p class="pt-3"></p>Coronavirus disease (COVID-19) is an infectious disease caused by a newly
                 discovered coronavirus.Most people who fall sick with COVID-19 will experience mild to moderate
                 symptoms and recover without special treatment.The disease has since spread worldwide, leading to 
@@ -33,12 +34,76 @@
 
             <!---------all data-------->
 
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <div class="card bg-warning text-white">
+                        <div class="card-body">
+                            <h3>Confirmed Cases</h3>
+                            <h3>{{all_data.confirmed.value}}</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card bg-success text-white">
+                        <div class="card-body">
+                            <h3>Recovered Cases</h3>
+                            <h3>{{all_data.recovered.value}}</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card bg-danger text-white">
+                        <div class="card-body">
+                            <h3>Death Cases</h3>
+                            <h3>{{all_data.deaths.value}}</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!---------End all data--------->
+
+
+            <input type="text" class="form-control mt-4" placeholder="Enter country here" ng-model='c' ng-change='get_c_data()'>  
+            
+
+
+            <!-------------c_data------------------>
+            <div class="container-fluid"  ng-if="c_data">
+                <h1 class="text-center mt-4 text-uppercase">{{c}} STATUS</h1>
+                <div class="row text-center mt-4">
+                    <div class="col-md-4">
+                        <div class="card bg-warning text-white">
+                            <div class="card-body">
+                                <h3>Confirmed Cases</h3>
+                                <h3>{{c_data.confirmed.value}}</h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card bg-success text-white">
+                            <div class="card-body">
+                                <h3>Recovered Cases</h3>
+                                <h3>{{c_data.recovered.value}}</h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card bg-danger text-white">
+                            <div class="card-body">
+                                <h3>Death Cases</h3>
+                                <h3>{{c_data.deaths.value}}</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-------------End c_data--------------->
+
+
          </div>
     </div>
 </body>
